--- a/config.toml
+++ b/config.toml
@@ -47,8 +47,8 @@ paginate = 5
 [languages]
   [languages.en]
     languageName = "English"
-    title = "Terminal"
-    subtitle = "A simple, retro theme for Hugo"
+    title = "Raul"
+    subtitle = "my blog"
     owner = ""
     keywords = ""
     copyright = ""
@@ -59,7 +59,7 @@ paginate = 5
     missingBackButtonLabel = "Back to home page"
 
     [languages.en.params.logo]
-      logoText = "Terminal"
+      logoText = "Raul"
       logoHomeLink = "/"
 
     [languages.en.menu]
