--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,11 @@
-baseURL = "https://agitated-thompson-c4185c.netlify.app/"
+baseURL = "https://raulcodes.com/"
 languageCode = "en-us"
 title = "Raul Camacho"
 theme = "terminal"
-paginate = 5
+paginate = 10
+
+[taxonomies]
+  tag = "tags"
 
 [params]
   # dir name of your main content (default is `content/posts`).
