feat: move to oso

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,3 @@
-[submodule "themes/hugo-papel"]
-	path = themes/hugo-papel
-	url = https://github.com/raulcodes/hugo-papel
-[submodule "themes/paper"]
-	path = themes/paper
-	url = https://github.com/nanxiaobei/hugo-paper
+[submodule "themes/oso"]
+	path = themes/oso
+	url = https://github.com/raulcodes/oso
