feat: theme update

--- a/config.yaml
+++ b/config.yaml
@@ -38,7 +38,7 @@ params:
   env: production
 
   # Available themes: gotham, toothpaste, dracula, gandalf
-  colorTheme: toothpaste
+  colorTheme: gandalf
 
   # Font family: IBM Plex, available styles: serif, sans
   fontStyle: sans 
