--- a/config.yaml
+++ b/config.yaml
@@ -40,7 +40,7 @@ params:
   env: production
 
   # Available themes: gotham, toothpaste, dracula, gandalf, red-graphite
-  colorTheme: gandalf
+  colorTheme: red-graphite
 
   # Font family: IBM Plex, available styles: serif, sans
   fontStyle: sans
