fix tags on all posts; theme update

--- a/.forestry/front_matter/templates/base-post-template.yml
+++ b/.forestry/front_matter/templates/base-post-template.yml
@@ -12,8 +12,8 @@ fields:
   name: author
   label: author
 - type: list
-  name: keywords
-  label: keywords
+  name: tags
+  label: tags
 - type: text
   name: summary
   label: summary
